# eth-finetuning-cookbook

./: .gitignore  LICENSE  README.md  coverage.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: weekly_task_scan.yml
configs/: evaluation_config.yaml  extraction_config.yaml.example  training_config.yaml  training_config.yaml.example
docs/: BRIEF.md  ROADMAP.md  SPEC.md  data-extraction-guide.md  evaluation-guide.md  fine-tuning-guide.md  getting-started.md
docs/decoders/uniswap/: v3.md
notebooks/: 01-data-exploration.ipynb  02-data-extraction.ipynb  03-dataset-preparation.ipynb  04-fine-tuning.ipynb  05-evaluation.ipynb
scripts/: __init__.py  benchmark_mvp.py  decode_transactions.py  fetch_transactions.py  find_tasks.py  generate_sample_predictions.py  requirements.txt  validate_full_pipeline.py
scripts/dataset/: prepare_training_data.py
scripts/evaluation/: evaluate_model.py
scripts/examples/: __init__.py  analyze_transaction.py  run_inference.py
scripts/extraction/: __init__.py  decode_erc20.py  decode_eth_transfers.py  export_csv.py  fetch_transactions.py  utils.py
scripts/extraction/abis/: erc20.json
scripts/training/: train_model.py  validate_infrastructure.py
src/eth_finetuning/: __init__.py
src/eth_finetuning/dataset/: __init__.py  intent_extraction.py  preparation.py  templates.py
src/eth_finetuning/evaluation/: __init__.py  evaluator.py  metrics.py  report.py
src/eth_finetuning/extraction/: __init__.py  export.py
src/eth_finetuning/extraction/abis/: uniswap_v2.json  uniswap_v3.json
src/eth_finetuning/extraction/core/: __init__.py  fetcher.py  normalization.py  utils.py
src/eth_finetuning/extraction/decoders/: __init__.py  erc20.py  eth.py
src/eth_finetuning/extraction/decoders/uniswap/: __init__.py  v2.py  v3.py
src/eth_finetuning/training/: __init__.py  config.py  trainer.py
tests/: README.md  test_dataset.py  test_decoders.py  test_extraction.py  test_integration.py  test_normalization.py
tests/fixtures/: sample_transactions.json  sample_tx_hashes.txt
